--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=api
+
+spring.datasource.url=jdbc:mysql://localhost/vollmed_api
+spring.datasource.username=victor
+spring.datasource.password=1234
