--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=api
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=victor
 spring.datasource.password=1234
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
